--- a/DashBoard/DashBoard.csproj
+++ b/DashBoard/DashBoard.csproj
@@ -36,13 +36,19 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ApprovalTests">
-      <HintPath>..\packages\ApprovalTests.2.2\lib\ApprovalTests.dll</HintPath>
+      <HintPath>..\packages\ApprovalTests.3.0.5\lib\net40\ApprovalTests.dll</HintPath>
     </Reference>
     <Reference Include="ApprovalUtilities">
-      <HintPath>..\packages\ApprovalTests.2.2\lib\ApprovalUtilities.dll</HintPath>
+      <HintPath>..\packages\ApprovalUtilities.3.0.5\lib\net35\ApprovalUtilities.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="SharpSvn">
+      <HintPath>..\packages\SharpSvn.1.8-x86.1.8005.2698\lib\net20\SharpSvn.dll</HintPath>
+    </Reference>
+    <Reference Include="SharpSvn.UI">
+      <HintPath>..\packages\SharpSvn.1.8-x86.1.8005.2698\lib\net20\SharpSvn.UI.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -71,6 +77,7 @@
     <Compile Include="CheckInChart.Designer.cs">
       <DependentUpon>CheckInChart.cs</DependentUpon>
     </Compile>
+    <Compile Include="Churn.cs" />
     <Compile Include="CodeCheckInsTest.cs" />
     <Compile Include="BugsChart.cs">
       <SubType>Form</SubType>
@@ -78,6 +85,9 @@
     <Compile Include="BugsChart.Designer.cs">
       <DependentUpon>BugsChart.cs</DependentUpon>
     </Compile>
+    <Compile Include="FileChanged.cs" />
+    <Compile Include="FileChangedByDay.cs" />
+    <Compile Include="FileChurn.cs" />
     <Compile Include="MeetingsChart.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,6 +97,9 @@
     <Compile Include="MeetingsTest.cs" />
     <Compile Include="MyImageReporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ChurnTest.cs" />
+    <Compile Include="Svn\SvnUtils.cs" />
+    <Compile Include="Svn\SvnConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
