--- a/DashBoard/packages.config
+++ b/DashBoard/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ApprovalTests" version="2.2" targetFramework="net45" />
+  <package id="ApprovalTests" version="3.0.5" targetFramework="net45" />
+  <package id="ApprovalUtilities" version="3.0.5" targetFramework="net45" />
+  <package id="SharpSvn.1.8-x86" version="1.8005.2698" targetFramework="net45" />
 </packages>
